[metadata]
name = cljbridge
version = 0.0.6
author = Carsten Behring
author_email = carsten.behring@gmail.com
description = An extension og python-javabridge to start Clojure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/behrica/clojurebridge
project_urls =
    Bug Tracker = https://github.com/behrica/clojurebridge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    python-javabridge

[options.packages.find]
where = src
